--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
 }
 
 body {
+    background-color: black;
+    color: white;
+}
+
+body.dark-theme {
     background: #454545;
-    color: #fff;
 }
 
 .container {
@@ -21,10 +25,10 @@ body {
     padding: 10px;
 }
 
-textarea {
+textarea, code#codigoDestacado.hljs.css.language-css {
     width: 100%;
     height: 28%;
-    background: #1f1f1f;
+    background: #5c5b5b;
     color: #fff;
     padding: 10px 20px;
     border: 0;
@@ -32,12 +36,25 @@ textarea {
     font-size: 18px;
 }
 
+textarea.dark-theme {
+    background: #fff;
+    color: #1f1f1f;
+}
+
 iframe {
     width: 100%;
     height: 95%;
-    background-color: #fff;
+    background-color: #929292;
     border: 0;
     outline: 0;
+    color: white;
+}
+.html-code {
+    color: #E76F51; /* Cor para destaque de HTML */
+}
+
+iframe.dark-theme {
+    background-color: #fff;
 }
 
 label {
@@ -48,6 +65,8 @@ label {
     padding-left: 10px;
     padding-right: 10px;
     margin-left: 10px;
+    user-select: none;
+    font-size: .8rem;
 }
 
 label i {
@@ -62,10 +81,3 @@ label i {
     display: flex;
 }
 
-.save-label {
-    cursor: pointer;
-}
-
-.export-label {
-    cursor: pointer;
-}
